...
        android:id="@+id/textview"
        android:textColor="@android:color/black"
        android:textAlignment = "center"
        android:textSize="50sp"/>

    <EditText
        android:id="@+id/etxtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:hint="Username : "
        android:inputType="text"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/userView"
        tools:layout_editor_absoluteY="200dp" />

    <EditText
        android:id="@+id/etxtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="Password : "
        android:inputType="text"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/etxtConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="Confirm password : "
        android:inputType="text"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5EC1F6"
        android:text="@string/registrati"
        android:textColor="@android:color/black"
        android:layout_marginTop="30dp"/>
...
